--- a/theme/src/controls/aero/tooltip.scss
+++ b/theme/src/controls/aero/tooltip.scss
@@ -1,5 +1,6 @@
 :root[data-wmpotify-control-style="aero"] {
-  .main-contextMenu-tippy {
+  .main-contextMenu-tippy,
+  [data-testid="progress-label"] {
     border: 1px solid var(--tooltip-border-color);
     border-radius: 3px;
     box-shadow: 5px 5px 3px -3px rgba(0, 0, 0, 0.4);
