--- a/theme/src/controls/classic/tooltip.scss
+++ b/theme/src/controls/classic/tooltip.scss
@@ -1,5 +1,6 @@
 :root:not([data-wmpotify-control-style="aero"]):not([data-wmpotify-control-style="10"]) {
-  .main-contextMenu-tippy {
+  .main-contextMenu-tippy,
+  [data-testid="progress-label"] {
     border: 1px solid var(--info-text);
     border-radius: 0;
     background: var(--info-window);
